--- a/app/_locales/es_419/messages.json
+++ b/app/_locales/es_419/messages.json
@@ -1256,6 +1256,9 @@
   "viewOnEtherscan": {
     "message": "Ver en Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Ver en Ethplorer"
+  },
   "visitWebSite": {
     "message": "Visita nuestro sitio web"
   },
