--- a/app/_locales/et/messages.json
+++ b/app/_locales/et/messages.json
@@ -1267,6 +1267,9 @@
   "viewOnEtherscan": {
     "message": "Kuva Etherscanil"
   },
+  "viewOnEthplorer": {
+    "message": "Kuva Ethplorer"
+  },
   "visitWebSite": {
     "message": "Külastage meie veebilehte"
   },
