--- a/app/_locales/fi/messages.json
+++ b/app/_locales/fi/messages.json
@@ -1274,6 +1274,9 @@
   "viewOnEtherscan": {
     "message": "Näytä Etherscanissa"
   },
+  "viewOnEthplorer": {
+    "message": "Näytä Ethplorerissa"
+  },
   "visitWebSite": {
     "message": "Vieraile verkkosivustollamme"
   },
