--- a/app/_locales/id/messages.json
+++ b/app/_locales/id/messages.json
@@ -1249,6 +1249,9 @@
   "viewOnEtherscan": {
     "message": "Lihat di Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Lihat di Ethplorer"
+  },
   "visitWebSite": {
     "message": "Kunjungi website kami"
   },
