--- a/app/_locales/it/messages.json
+++ b/app/_locales/it/messages.json
@@ -1685,6 +1685,9 @@
   "viewOnEtherscan": {
     "message": "Vedi su Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Vedi su Ethplorer"
+  },
   "retryTransaction": {
     "message": "Retry Transaction"
   },
