--- a/app/_locales/no/messages.json
+++ b/app/_locales/no/messages.json
@@ -1249,6 +1249,9 @@
   "viewOnEtherscan": {
     "message": "Vis på Etherscan "
   },
+  "viewOnEthplorer": {
+    "message": "Vis på Ethplorer "
+  },
   "visitWebSite": {
     "message": "Besøk nettsiden vår "
   },
