--- a/app/_locales/pt_BR/messages.json
+++ b/app/_locales/pt_BR/messages.json
@@ -1259,6 +1259,9 @@
   "viewOnEtherscan": {
     "message": "Ver no Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Ver no Ethplorer"
+  },
   "visitWebSite": {
     "message": "Visite nosso site"
   },
