--- a/app/_locales/sk/messages.json
+++ b/app/_locales/sk/messages.json
@@ -1234,6 +1234,9 @@
   "viewOnEtherscan": {
     "message": "Zobraziť na Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Zobraziť na Ethplorer"
+  },
   "visitWebSite": {
     "message": "Navštivte naši stránku"
   },
