--- a/app/_locales/sv/messages.json
+++ b/app/_locales/sv/messages.json
@@ -1252,6 +1252,9 @@
   "viewOnEtherscan": {
     "message": "Visa på Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Visa på Ethplorer"
+  },
   "visitWebSite": {
     "message": "Besök vår hemsida"
   },
