--- a/app/_locales/sw/messages.json
+++ b/app/_locales/sw/messages.json
@@ -1255,6 +1255,9 @@
   "viewOnEtherscan": {
     "message": "Tazama kwenye Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Tazama kwenye Ethplorer"
+  },
   "visitWebSite": {
     "message": "Tembelea Tovuti yetu"
   },
