--- a/app/_locales/ca/messages.json
+++ b/app/_locales/ca/messages.json
@@ -1246,6 +1246,9 @@
   "viewOnEtherscan": {
     "message": "Veure a Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Veure a Ethplorer"
+  },
   "visitWebSite": {
     "message": "Visita el nostre lloc web"
   },
