--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -187,11 +187,11 @@
   "alertsSettingsDescription": {
     "message": "Enable or disable each alert"
   },
-  "alertSettingsUnconnectedAccount": {	
-    "message": "Browsing a website with an unconnected account selected"	
-  },	
-  "alertSettingsUnconnectedAccountDescription": {	
-    "message": "This alert is shown in the popup when you are browsing a connected Web3 site, but the currently selected account is not connected."	
+  "alertSettingsUnconnectedAccount": {
+    "message": "Browsing a website with an unconnected account selected"
+  },
+  "alertSettingsUnconnectedAccountDescription": {
+    "message": "This alert is shown in the popup when you are browsing a connected Web3 site, but the currently selected account is not connected."
   },
   "allowOriginSpendToken": {
     "message": "Allow $1 to spend your $2?",
@@ -1684,6 +1684,9 @@
   },
   "viewOnEtherscan": {
     "message": "View on Etherscan"
+  },
+  "viewOnEthplorer": {
+    "message": "View on Ethplorer"
   },
   "retryTransaction": {
     "message": "Retry Transaction"
