--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -1009,6 +1009,9 @@
   "viewOnEtherscan": {
     "message": "Ver en Etherscan"
   },
+  "viewOnEthplorer": {
+    "message": "Ver en Ethplorer"
+  },
   "visitWebSite": {
     "message": "Visita nuestro sitio web"
   },
