--- a/app/_locales/kn/messages.json
+++ b/app/_locales/kn/messages.json
@@ -1277,6 +1277,9 @@
   "viewOnEtherscan": {
     "message": "ಎಥೆರ್‌ಸ್ಕ್ಯಾನ್‌ನಲ್ಲಿ ವೀಕ್ಷಿಸಿ"
   },
+  "viewOnEthplorer": {
+    "message": "ಎಥ್‌ಪ್ಲೋರರ್‌ನಲ್ಲಿ ವೀಕ್ಷಿಸಿ"
+  },
   "visitWebSite": {
     "message": "ನಮ್ಮ ವೆಬ್ ಸೈಟ್ ಅನ್ನು ಭೇಟಿ ಮಾಡಿ"
   },
