docs(trans): Pontus -> Oceanus don't depends on time (#190)

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -855,7 +855,7 @@
     "message": "Lock time is too great"
   },
   "mainnet": {
-    "message": "Conflux Pontus"
+    "message": "Conflux Oceanus"
   },
   "memorizePhrase": {
     "message": "Memorize this phrase."
