--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -689,7 +689,7 @@
     "message": "锁定"
   },
   "mainnet": {
-    "message": "Conflux Pontus"
+    "message": "Conflux Oceanus"
   },
   "memorizePhrase": {
     "message": "记住该密语。"
