--- a/app/_locales/zh_TW/messages.json
+++ b/app/_locales/zh_TW/messages.json
@@ -670,7 +670,7 @@
     "message": "鎖定"
   },
   "mainnet": {
-    "message": "Conflux Pontus"
+    "message": "Conflux Oceanus"
   },
   "memorizePhrase": {
     "message": "絕對不要忘記您的助憶詞。"
