Adds main-quote-summary component

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1656,7 +1656,10 @@
     "message": "Advanced Options"
   },
   "swapsBestQuote": {
-    "message": "Best Quote"
+    "message": "Best quote"
+  },
+  "swapsConvertToAbout": {
+    "message": "Convert $1 to about"
   },
   "swapsErrorFetchingQuotes": {
     "message": "Error fetching quotes"
