--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1536,6 +1536,18 @@
   "swapCustom": {
     "message": "custom"
   },
+  "swapErrorDescription": {
+    "message": "Your trade did not succeed. Please try again."
+  },
+  "swapEstimatedTime": {
+    "message": "Estimated time:"
+  },
+  "swapEstimatedTimeCalculating": {
+    "message": "Calculating..."
+  },
+  "swapEstimatedTimeFull": {
+    "message": "$1 $2"
+  },
   "swapFetchingTokens": {
     "message": "Fetching tokens..."
   },
@@ -1584,6 +1596,12 @@
   "swapNetworkFeesInfo": {
     "message": "This is the cost to process the swap on the Ethereum network. It’s also known as “gas” fees."
   },
+  "swapOnceTransactionHasProcess": {
+    "message": "Your $1 will be added to your account once this transaction has processed"
+  },
+  "swapProcessing": {
+    "message": "Processing..."
+  },
   "swapQuoteDetails": {
     "message": "Quote details"
   },
@@ -1628,6 +1646,18 @@
   },
   "swapStartSwapping": {
     "message": "Start swapping"
+  },
+  "swapSwapError": {
+    "message": "Swap failed"
+  },
+  "swapSwapErrorDescription": {
+    "message": "Your trade did not succeed. Please try again."
+  },
+  "swapTokenAvailable": {
+    "message": "Your $1 has been added to your account."
+  },
+  "swapTransactionComplete": {
+    "message": "Transaction complete"
   },
   "swapsAdvancedOptions": {
     "message": "Advanced Options"
