--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1532,6 +1532,15 @@
   "supportCenter": {
     "message": "Visit our Support Center"
   },
+  "swapCheckingQuote": {
+    "message": "Checking $1..."
+  },
+  "swapFinalizing": {
+    "message": "Finalizing..."
+  },
+  "swapQuoteNofN": {
+    "message": "Quote $1 of $2"
+  },
   "switchNetworks": {
     "message": "Switch Networks"
   },
