Adds new wallet overview buttons

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1509,6 +1509,9 @@
   "supportCenter": {
     "message": "Visit our Support Center"
   },
+  "swap": {
+    "message": "Swap"
+  },
   "swapCheckingQuote": {
     "message": "Checking $1..."
   },
