--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1559,6 +1559,9 @@
   "swapFinalizing": {
     "message": "Finalizing..."
   },
+  "swapHighSlippageWarning": {
+    "message": "Your transaction may be frontrun"
+  },
   "swapIntroLearnMoreHeader": {
     "message": "Want to learn more?"
   },
@@ -1624,6 +1627,9 @@
   },
   "swapSelectQuotePopoverDescription": {
     "message": "Below are all the quotes gathered from multiple liquidity sources."
+  },
+  "swapSlippageTooLow": {
+    "message": "Slippage must be greater than zero"
   },
   "swapSource": {
     "message": "Liquidity Source"
