--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1082,6 +1082,9 @@
   "onlyAddTrustedNetworks": {
     "message": "A malicious Ethereum network provider can lie about the state of the blockchain and record your network activity. Only add custom networks you trust."
   },
+  "onlyAvailableOnMainnet": {
+    "message": "Only available on mainnet"
+  },
   "onlyConnectTrust": {
     "message": "Only connect with sites you trust."
   },
