--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1764,5 +1764,15 @@
   "encryptionPublicKeyNotice": {
     "message": "$1 would like your public encryption key. By consenting, this site will be able to compose encrypted messages to you.",
     "description": "$1 is the web3 site name"
+  },
+  "troubleConnectingToWallet": {
+    "message": "We had trouble connecting to your $1, try reviewing",
+    "description": "$1 is the wallet device name"
+  },
+  "walletConnectionGuide": {
+    "message": "our hardware wallet connection guide"
+  },
+  "andTryAgain": {
+    "message": "and try again."
   }
 }
