Fix copy issue and proptypes errors in select-quote-popover component

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1592,6 +1592,9 @@
   "swapMetaMaskFeeInfo": {
     "message": "This fee helps us make MetaMask even better. The 'amount received' number includes this fee."
   },
+  "swapMinimumAmountReceivingInfoTooltip": {
+    "message": "This is the minimum amount you will receive. You may receive more depending on slippage."
+  },
   "swapNetworkFees": {
     "message": "Network fees"
   },
