--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1569,6 +1569,9 @@
   "swapMetaMaskFeeInfo": {
     "message": "This fee helps us make MetaMask even better. The 'amount received' number includes this fee."
   },
+  "swapMinimumAmountReceivingInfoTooltip": {
+    "message": "This is the minimum amount you will receive. You may receive more depending on slippage."
+  },
   "swapNetworkFees": {
     "message": "Network fees"
   },
