--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1555,6 +1555,9 @@
   "swapFinalizing": {
     "message": "Finalizing..."
   },
+  "swapGetQuotes": {
+    "message": "Get quotes"
+  },
   "swapHighSlippageWarning": {
     "message": "Your transaction may be frontrun"
   },
