Adds remaining swaps routes, the swaps header and footer, and the swaps routes container

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1578,6 +1578,9 @@
   "swapFinalizing": {
     "message": "Finalizing..."
   },
+  "swapGetQuotes": {
+    "message": "Get quotes"
+  },
   "swapHighSlippageWarning": {
     "message": "Your transaction may be frontrun"
   },
