--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1551,7 +1551,8 @@
     "message": "The exact amount you’ll receive depends on slippage"
   },
   "swapApproveNeedMoreTokens": {
-    "message": "You need $1 more $2 to complete this Swap"
+    "message": "You need $1 more $2 to complete this swap",
+    "description": "Tells the user how many more of a given token they need for a specific swap. $1 is an amount of tokens and $2 is the token symbol."
   },
   "swapBestQuote": {
     "message": "Best quote"
@@ -1653,7 +1654,8 @@
     "message": "This is the minimum amount you will receive. You may receive more depending on slippage."
   },
   "swapNQuotesAvailable": {
-    "message": "$1 quotes available"
+    "message": "$1 quotes available",
+    "description": "$1 is the number of quotes that the user can select from when opening the list of quotes on the 'view quote' screen"
   },
   "swapNetworkFees": {
     "message": "Network fees"
