Remove swaps-route-container component and add swaps-footer component

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1729,6 +1729,9 @@
   "terms": {
     "message": "Terms of Use"
   },
+  "termsOfService": {
+    "message": "Terms of Service"
+  },
   "testFaucet": {
     "message": "Test Faucet"
   },
