--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1752,6 +1752,9 @@
   "terms": {
     "message": "Terms of Use"
   },
+  "termsOfService": {
+    "message": "Terms of Service"
+  },
   "testFaucet": {
     "message": "Test Faucet"
   },
