improve translation for zh_CN

--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -636,7 +636,7 @@
     "message": "忘记此设备"
   },
   "from": {
-    "message": "发送方"
+    "message": "从"
   },
   "fromAddress": {
     "message": "从：$1"
